Fix content wrap class

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ html{
 }
 
 .content-wrap{
+    min-height: 100vh;
     padding-bottom: 2.5rem;
 }
 
